--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,6 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  list-style: none;
-  text-decoration: none;
 }
 
 a,
@@ -87,9 +85,11 @@ img {
   font-weight: 500;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav .current {
   color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav:hover,
@@ -103,6 +103,23 @@ img {
   border-bottom: 1px solid var(--border-color);
 }
 
+/*__________________________________zastosowanie pseudoelementu_______________________*/
+
+.section-after {
+  position: relative;
+}
+
+.current::after {
+  content: ' ';
+  display: block;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  margin-top: 28px;
+  position: absolute;
+  bottom: -32px;
+}
 /*__________________________________ linki nawigacjyjne_______________________________ */
 .site-nav {
   color: var(--section-text-color);
@@ -120,10 +137,14 @@ img {
   letter-spacing: 0.02em;
 }
 
+
+
 .mail-active,
 .phone-active {
   display: flex;
   align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-active:hover,
@@ -158,7 +179,9 @@ img {
   padding-bottom: 200px;
   background-color: var(--primary-heder-footer-color);
   flex-grow: 1;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(
+    rgba(47, 48, 58, 0.4), 
+    rgba(47, 48, 58, 0.4)),
     url('../images/img-hero.jpg');
   background-size: cover;
   max-width: 1600px;
@@ -193,6 +216,8 @@ img {
   border: none;
   padding-top: 10px;
   padding-bottom: 10px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -226,6 +251,8 @@ img {
 .logo-style {
   color: var(--accent-color);
 }
+
+
 
 /* ________________________________Style tekstów w sekcjach_______________________________ */
 
@@ -309,6 +336,25 @@ img {
   margin-left: 30px;
 }
 
+.section-photo {
+  position: relative;
+}
+
+.overlay-photo {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+  text-align: center;
+  width: 370px;
+  height: 70px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
 /* _____________________Nasz zaspół_______________________ */
 .comand-item {
   margin-bottom: 50px;
@@ -373,12 +419,18 @@ img {
   height: 44px;
   border-radius: 50%;
   fill: #afb1b8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-icon:hover,
 .contact-icon:focus {
   fill: var(--primary-white-color);
   color: var(--primary-white-color);
+  transition: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .contacts-link:hover,
@@ -421,6 +473,9 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .partnet-link:hover,
@@ -450,10 +505,12 @@ img {
 
 .footer-address {
   color: var(--primary-white-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-phone,
 .footer-mail {
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address,
@@ -499,6 +556,8 @@ img {
   height: 44px;
   border-radius: 50%;
   fill: var(--primary-white-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join-icon {
@@ -559,12 +618,42 @@ img {
 
 .galery-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .galery-link:hover,
 .galery-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.galery-link:hover .overlay,
+.galery-link:focus .overlay {
+  transform: translateY(0%);
+}
+
+.galery-img-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  font-size: 18px;
+  line-height: 1.56;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--primary-white-color);
+  padding-top: 63px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+
+  transform: translateY(101%);
+  transition: transform 250ms linear;
 }
 
 /*_____________________________________Galeria fotosów _____________________________________ */
@@ -596,6 +685,9 @@ img {
   border-color: transparent;
   border-radius: 4px;
   padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-galery:hover,
 .button-galery:focus {
@@ -603,4 +695,68 @@ img {
   background-color: var(--button-second-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 528px;
+  height: 581px;
+  background: var(--primary-white-color);
+  transform: translate(-50%, -50%);
+  animation-name: changeModalBtn;
+  animation-duration: 2000ms;
+}
+
+/* Анимация */
+@keyframes changeModalBtn {
+  25% {
+    transform: scale(25%);
+    transform: opacity(25%);
+  }
+  50% {
+    transform: scale(50%);
+    transform: opacity(50%);
+  }
+  75% {
+    transform: scale(75%);
+    transform: opacity(75%);
+  }
+  100% {
+    transform: scale(100%);
+    transform: opacity(100%);
+  }
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border-radius: 50%;
+  border: 1px solid var(--primary-text-color);
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
