--- a/css/styles.css
+++ b/css/styles.css
@@ -137,14 +137,11 @@ img {
   letter-spacing: 0.02em;
 }
 
-
-
 .mail-active,
 .phone-active {
   display: flex;
   align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-active:hover,
@@ -179,9 +176,7 @@ img {
   padding-bottom: 200px;
   background-color: var(--primary-heder-footer-color);
   flex-grow: 1;
-  background-image: linear-gradient(
-    rgba(47, 48, 58, 0.4), 
-    rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/img-hero.jpg');
   background-size: cover;
   max-width: 1600px;
@@ -252,8 +247,6 @@ img {
   color: var(--accent-color);
 }
 
-
-
 /* ________________________________Style tekstów w sekcjach_______________________________ */
 
 .section-headline {
@@ -275,6 +268,24 @@ img {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.headline-flex {
+  display: flex;
 }
 
 .section-li {
@@ -474,8 +485,7 @@ img {
   align-items: center;
   justify-content: center;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .partnet-link:hover,
@@ -490,7 +500,7 @@ img {
 }
 /* _______________________________________FOOTER__________________________ */
 
-.section-footer:not(:last-child) {
+.section-footer {
   margin-bottom: 9px;
 }
 
@@ -719,7 +729,7 @@ img {
   animation-duration: 2000ms;
 }
 
-/* Анимация */
+/* _____________________________Animacja_______________________________ */
 @keyframes changeModalBtn {
   25% {
     transform: scale(25%);
